--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,14 @@ nav .navbar-brand img{
     letter-spacing: 0;
 }
 
+.registration h5{
+    font-size: 20px;
+    font-weight: 700;
+    margin: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 
 
 
