--- a/css/style.css
+++ b/css/style.css
@@ -298,10 +298,25 @@ section.deploy .box {
     
 }
 
-/*section.deploy .btn{
-    margin-left: 50%;
-    transform: translateX(-50%);
-}*/
+section.deploy-2 p {
+    margin: 0 10px 10px;
+}
+
+section.deploy-2 ul {
+    line-height: 40px;
+    list-style: none;
+    font-size: 20px;
+    padding: 20px 10px;
+}
+
+section.deploy-2 ul a{
+    border-left: 1px solid rgba(90, 88, 88, 0.733);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+}
+
+
 
 
 
