--- a/css/style.css
+++ b/css/style.css
@@ -186,8 +186,14 @@ nav .navbar-brand img{
 .registration.content.container{
     margin: auto;
 }
+
 .registration .btn{
     margin-right: 4px;
+}
+
+.registration .row .panel{
+    padding-left:0;
+    padding-right:0;
 }
 
 input{
@@ -326,12 +332,13 @@ section.deploy-2 ul a{
     display:block;
 }
 
-
-
-
-
-
 /* carousel */
+
+
+blockquote {
+    font-size: 11px;
+}
+
 #quote-carousel 
 {
   padding: 0 10px 30px 10px;
@@ -339,7 +346,7 @@ section.deploy-2 ul a{
 }
 
 .carousel-inner {
-    height: 15em;
+    height: 17em;
 }
 
 /* Control buttons  */
