--- a/css/style.css
+++ b/css/style.css
@@ -446,15 +446,22 @@ section.connection{
     margin: 10 0;
 }
 
+section.connection h2 {
+    padding-top: 40px;
+    padding-bottom: 20px;
+    text-align: center;    
+}
+
 section.connection ul {
-    list-style-position: outside;
     list-style-type: none;
-    margin-bottom: 20px;
-    padding-left: 0;
+    margin-bottom: 40px;
+    text-align: center;
+    
 }
 
 section.connection li  {
     border-bottom: 1px solid white;
+    text-align: center;
 }
 
 section.connection li p {
