--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ section.features{
 section.connection{
     background-image: linear-gradient(to bottom, #0047c5,#00209a);
     color: white;
-    margin: 10 0;
+    margin: 10px auto;
 }
 
 section.connection h2 {
