--- a/css/md.css
+++ b/css/md.css
@@ -15,3 +15,19 @@ blockquote {
 #quote-carousel img {
     width: 21em;
 }
+
+.rokerbox #quote-carousel .carousel-control.left {
+    display:block;      
+}
+
+.rokerbox #quote-carousel .carousel-control.right {
+    display:block;
+}
+
+.rokerbox #quote-carousel .carousel-control.left .large {
+    display:none;      
+}
+
+.rokerbox #quote-carousel .carousel-control.right .large {
+    display:none;
+}
